# VideoAgent

./: .env.example  .gitignore  README.md  STRUCTURE.txt  main.py  pyproject.toml  requirements.txt  video_agent.py
archive/video_agent_baseline_63/: agent.py
archive/video_agent_baseline_63/core/: video_memory.py
archive/video_agent_baseline_63/processors/: caption_processor.py  question_processor.py
archive/video_agent_chat_1202_67/: __init__.py  agent.py  cli.py
configs/: default.yaml  models.yaml
core/: __init__.py  video_memory.py
data/: videos
data/EgoSchema_test/: annotations.json  video_list.txt
data/annotations/: subset_anno.json
data/video_lists/: subset.txt  subset_valid.txt  test_one_video.txt
evaluation/: direct_frame_eval.py
processors/: __init__.py  caption_processor.py  question_processor.py
scripts/: analyze_round_performance.py  baseline_benchmarking.sh  direct_frame_eval.sh  extract_invalid_videos.py  run_default.sh  test.sh  test_chat_pipeline_1202.sh  test_model_vision.py  test_video_api.py
scripts/template/: eval.sh
tools/: interface_base.py
tools/interface/: __init__.py  image_captioning.py  internvideo2_5_interface.py  object_description.py  object_detection.py  temporal_spatial_understanding.py  videorag_qa.py  view_frame.py  visual_qa.py
utils/: AIML_API.py  __init__.py  config.py  general.py
video_agent/: __init__.py  agent.py  cli.py  description.txt
video_agent/agents/: checker.py  solver.py
video_agent/core/: __init__.py
video_agent/processors/: __init__.py  caption_processor.py  question_processor.py
video_agent/utils/: api.py  cache.py  config.py  logging_utils.py  parsing.py  video.py
video_agent_tools/: __init__.py  cli.py  evaluation.py  graph.py  prompts.py  state.py  tools.py
video_agent_tools/resource_management/: __init__.py  constants.py  core.py  gpu_manager.py  tool_client.py  tool_server.py
video_agent_tools/utils/: __init__.py  logging.py  tool_cache.py  video.py
(+13 files in other folders)
